@@ -1,5 +1,11 @@
 2008-07-24  Bean  <bean123ch@gmail.com>
 
+	* video/reader/png.c (DELFATE_HLIT_MAX): Change value.
+	(grub_png_init_fixed_block): New function.
+	(grub_png_decode_image_data): Handle fixed huffman code compression.
+
+2008-07-24  Bean  <bean123ch@gmail.com>
+
 	* common.rmk (bin_UTILITIES): Add grub-pe2elf.
 	(grub_pe2elf_SOURCES): New macro.
 	(CLEANFILES): Add grub-pe2elf.
